# src/controller/authController.js
@@ -1,0 +1,3 @@
+const authService = require('../service/authService');
+
+exports.login = (req, res) => res.json(authService.login(req.body || {}));
