# src/server.js
@@ -1,3 +1,8 @@
+require('./config/loadEnv');
+const authService = require('./service/authService');
+
+authService.assertConfiguration();
+
 const app = require('./app');
 
 const port = process.env.PORT || 3000;
